Fixed broken style (.flex.end put flex-start val in justify-content)

--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -71,7 +71,7 @@
     .space-between { justify-content: space-between }
 
     .flex.start { justify-content: flex-start }
-    .flex.end { justify-content: flex-start }
+    .flex.end { justify-content: flex-end }
     .flex.center { justify-content: center }
 
     /* flex :: align-items */
